# kdevwindowviewer

./: CMakeLists.txt  README.md  kdev-windowviewer.kdev4
src/: CMakeLists.txt  kdevwindowviewer.desktop  windowcontainer.cpp  windowcontainer.h  windowcontainer.ui  windowlistmodel.cpp  windowlistmodel.h  windowlistview.cpp  windowlistview.h  windowviewerplugin.cpp  windowviewerplugin.h
